// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> component onBlur event should render error message when date is below min 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #3e3e3e;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-0 input[type="search"]::-webkit-search-decoration,
.emotion-0 input[type="search"]::-webkit-search-cancel-button,
.emotion-0 input[type="search"]::-webkit-search-results-button,
.emotion-0 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e80000;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #e80000;
}

.emotion-2:focus-within,
.emotion-2:hover:not([disabled]) {
  border: 1px solid #e80000;
}

.emotion-2:hover:([disabled]) {
  border: 1px solid #e80000;
}

.emotion-2:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-2:has(input[disabled]),
.emotion-2:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-2:has(input[disabled]):hover,
.emotion-2:has(input[disabled])>*:hover {
  border-color: #e80000;
}

.emotion-2:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input::placeholder,
.emotion-2:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-3 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-3 input:-webkit-autofill,
.emotion-3 input:-webkit-autofill:hover,
.emotion-3 input:-webkit-autofill:focus,
.emotion-3 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-3::-webkit-input-placeholder {
  color: transparent;
}

.emotion-3::-moz-placeholder {
  color: transparent;
}

.emotion-3:-ms-input-placeholder {
  color: transparent;
}

.emotion-3::placeholder {
  color: transparent;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-5 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e80000;
}

<div>
  <div
    class="emotion-0"
    data-testid="choose-a-date-text-field"
  >
    <label
      class="emotion-1"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
    </label>
    <div
      class="emotion-2"
      data-testid="input-wrapper"
    >
      <input
        class="emotion-3"
        data-error="true"
        data-testid="input-field"
        id="Choose-a-date"
        min="2023-03-30"
        name="Choose-a-date"
        type="date"
        value="2023-02-01"
      />
    </div>
    <div
      class="emotion-4"
    >
      <span
        class="emotion-5"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component onBlur event should render error message when date is higher than max 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #3e3e3e;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-0 input[type="search"]::-webkit-search-decoration,
.emotion-0 input[type="search"]::-webkit-search-cancel-button,
.emotion-0 input[type="search"]::-webkit-search-results-button,
.emotion-0 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e80000;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #e80000;
}

.emotion-2:focus-within,
.emotion-2:hover:not([disabled]) {
  border: 1px solid #e80000;
}

.emotion-2:hover:([disabled]) {
  border: 1px solid #e80000;
}

.emotion-2:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-2:has(input[disabled]),
.emotion-2:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-2:has(input[disabled]):hover,
.emotion-2:has(input[disabled])>*:hover {
  border-color: #e80000;
}

.emotion-2:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:has(input[disabled]) input::placeholder,
.emotion-2:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-3 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-3 input:-webkit-autofill,
.emotion-3 input:-webkit-autofill:hover,
.emotion-3 input:-webkit-autofill:focus,
.emotion-3 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-3::-webkit-input-placeholder {
  color: transparent;
}

.emotion-3::-moz-placeholder {
  color: transparent;
}

.emotion-3:-ms-input-placeholder {
  color: transparent;
}

.emotion-3::placeholder {
  color: transparent;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-5 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e80000;
}

<div>
  <div
    class="emotion-0"
    data-testid="choose-a-date-text-field"
  >
    <label
      class="emotion-1"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
    </label>
    <div
      class="emotion-2"
      data-testid="input-wrapper"
    >
      <input
        class="emotion-3"
        data-error="true"
        data-testid="input-field"
        id="Choose-a-date"
        max="2025-03-30"
        name="Choose-a-date"
        type="date"
        value="2026-02-01"
      />
    </div>
    <div
      class="emotion-4"
    >
      <span
        class="emotion-5"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component should render date input correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #3e3e3e;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-0 input[type="search"]::-webkit-search-decoration,
.emotion-0 input[type="search"]::-webkit-search-cancel-button,
.emotion-0 input[type="search"]::-webkit-search-results-button,
.emotion-0 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e80000;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-3:focus-within,
.emotion-3:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-3:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-3:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-3:has(input[disabled]),
.emotion-3:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-3:has(input[disabled]):hover,
.emotion-3:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-3:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-3:has(input[disabled]) input::placeholder,
.emotion-3:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-4 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-4 input:-webkit-autofill,
.emotion-4 input:-webkit-autofill:hover,
.emotion-4 input:-webkit-autofill:focus,
.emotion-4 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-4::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4::-moz-placeholder {
  color: transparent;
}

.emotion-4:-ms-input-placeholder {
  color: transparent;
}

.emotion-4::placeholder {
  color: transparent;
}

<div>
  <div
    class="emotion-0"
    data-testid="choose-a-date-text-field"
  >
    <label
      class="emotion-1"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
      <span
        class="emotion-2"
        color="error.default"
        data-testid="typography"
      >
        *
      </span>
    </label>
    <div
      class="emotion-3"
      data-testid="input-wrapper"
    >
      <input
        class="emotion-4"
        data-error="false"
        data-testid="input-field"
        id="Choose-a-date"
        max="2025-03-30"
        min="2023-03-30"
        name="Choose-a-date"
        type="date"
        value=""
      />
    </div>
  </div>
</div>
`;
